# ffm3u8

ffm3u8/: pyproject.toml  setup.py
ffm3u8/src/ffm3u8/: ffm3u8.py
