[project]
name = "ffm3u8"
version = "1.1.1"
authors = [
  { name = "Nongyi", email = "13360350080@163.com" },
]
dependencies = []
description = "A simple TS download module"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
